welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.error
Diagonal:60: error: expected start of definition
	override def forward(i:Int)  { 
                 ^Diagonal:63: error: expected start of definition
	override def forward()  {
                 ^Diagonal:66: error: expected start of definition
	override def backward(i:Int) {
                 ^Diagonal:69: error: expected start of definition
	override def backward() {
                 ^Diagonal:72: error: Unmatched closing brace '}' ignored here
}
^